--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "从0到1搭建一个包含 vue2 app、vue3 app、react app、通用工具函数的monorepo",
   "private": true,
+  "type": "module",
   "scripts": {
+    "prepare": "husky install",
     "preinstall": "npx only-allow pnpm",
     "app-vue2:dev": "pnpm serve --filter=\"app-vue2\"",
     "app-vue3:dev": "pnpm dev --filter \"app-vue3\"",
-    "app-react:dev": "pnpm start --filter \"app-react\""
+    "app-react:dev": "pnpm start --filter \"app-react\"",
+    "git": "node shell/cli.js b",
+    "commit-lint": "node shell/commit-lint.js"
   },
   "repository": {
     "type": "git",
@@ -19,7 +23,14 @@
   },
   "homepage": "https://github.com/shubenwuming/monorepo-pnpm-demo#readme",
   "dependencies": {
+    "chalk": "^5.0.1",
+    "commander": "^9.2.0",
+    "inquirer": "^8.2.2",
     "lodash": "^4.17.21",
+    "shelljs": "^0.8.5",
     "utils": "workspace:*"
+  },
+  "devDependencies": {
+    "husky": "^7.0.4"
   }
 }
